# netbox-plugin-dns

./: COMPATIBILITY.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: lint.yml
docs/: using_netbox_dns.md
examples/custom-scripts/: AXFR_Importer.py  DNS_IPAM_Updater.py  NetBox_DNS_Exporter.py  NetBox_DNS_Tenancy.py
examples/custom-validators/: dnssync_perm.py
netbox_dns/: __init__.py  navigation.py  template_content.py
netbox_dns/api/: nested_serializers.py  serializers.py  urls.py  views.py
netbox_dns/choices/: __init__.py  dnssec_key_template.py  dnssec_policy.py  record.py
netbox_dns/fields/: __init__.py  address.py  network.py  rfc2317.py  timeperiod.py
netbox_dns/filtersets/: dnssec_key_template.py  dnssec_policy.py  nameserver.py  record.py  record_template.py  registrar.py  registration_contact.py  view.py  zone.py  zone_template.py
netbox_dns/forms/: dnssec_key_template.py  dnssec_policy.py  nameserver.py  record.py  record_template.py  registrar.py  registration_contact.py  view.py  zone.py  zone_template.py
netbox_dns/graphql/: __init__.py  enums.py  filter_lookups.py  schema.py  types.py
netbox_dns/jobs/: __init__.py  record_expiration.py
netbox_dns/migrations/: 0001_squashed_netbox_dns_0_22.py  0006_templating.py  0007_alter_ordering_options.py  0009_rename_contact_registrationcontact.py  0010_view_ip_address_filter.py  0011_rename_related_fields.py  0012_natural_ordering.py  0013_zonetemplate_soa_mname_zonetemplate_soa_rname.py  0014_alter_unique_constraints_lowercase.py  0015_dnssec.py  0016_dnssec_policy_status.py  0017_dnssec_policy_zone_zone_template.py  0018_zone_domain_status_zone_expiration_date.py  0019_dnssecpolicy_parental_agents.py  0020_remove_dnssecpolicy_parental_agents_and_more.py  0021_alter_record_ptr_record.py  0022_alter_record_ipam_ip_address.py  (+10 more)
(+144 files in other folders)
